# clean-code-project

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject-1.1.15.toml  pyproject.toml  setup.cfg
backend/api/: auth.py  recipes.py
backend/core/: __init__.py  app.py  auth.py  config.py
backend/crud/: recipe_crud.py
backend/database/: __init__.py  database.py
backend/exceptions/: __init__.py  db_exceptions.py  http_exceptions.py
backend/models/: __init__.py  nutritional_values.py  pagination_model.py  recipe.py  recipe_model.py  shared_model.py  token_model.py  user_model.py
backend/scraper/: __init__.py  recipe_scraper.py
backend/services/: __init__.py  recipe.py
backend/src/: recipe.py  recipes_controller.py  recipes_service.py  scraper.py
backend/tests/: conftest.py
backend/tests/models/: test_nutritional_values_model.py  test_recipe_model.py  test_shared_model.py  test_token_model.py  test_user_model.py
backend/utils/: __init__.py  utils.py
frontend/: .eslintrc.js  .prettierrc  .prettierrc.js  gatsby-browser.js  gatsby-config.js  gatsby-config.ts  gatsby-ssr.js  package-lock.json  package.json  tsconfig.json
frontend/pages/: index.tsx
frontend/src/: custom.d.ts
frontend/src/api/: axiosConfig.ts  recipeAPI.ts
frontend/src/components/: index.module.css.d.ts
frontend/src/components/Authentication/: authentication.module.scss  authentication.module.scss.d.ts  muiStylesAuthentication.ts  types.ts
frontend/src/components/Banner/: banner.module.scss  banner.module.scss.d.ts  index.tsx
frontend/src/components/CategoryList/: index.tsx  muiStylesCategoryList.ts
frontend/src/components/Ingredient/: index.tsx  ingredient.module.scss  ingredient.module.scss.d.ts
frontend/src/components/Layout/: index.tsx  layout.module.scss  layout.module.scss.d.ts  muiStylesLayout.ts  utils.tsx
frontend/src/components/Reccomendation/: index.tsx
frontend/src/components/Recipe/: index.tsx  recipe.module.scss
frontend/src/components/RecipeList/: index.tsx
frontend/src/components/RecipePreview/: index.tsx  recipePreview.module.scss  recipePreview.module.scss.d.ts
frontend/src/components/SearchEngine/: muiStylesSearch.ts  search.module.scss  search.module.scss.d.ts  types.ts
frontend/src/pages/: 404.js  404.tsx  app.tsx  category.tsx  index.tsx  page-2.js  result.tsx  using-ssr.js  using-typescript.tsx
frontend/src/pages/category/: [name].tsx
frontend/src/pages/recipe/: [id].tsx  [recipe._id].tsx
frontend/src/redux/: store.ts
frontend/src/redux/actions/: authActions.ts  notificationsActions.ts  recipeActions.ts
frontend/src/redux/reducers/: authReducers.ts  index.ts  notificationsReducers.ts  recipesReducers.ts
frontend/src/styles/: variables.scss
frontend/src/templates/: using-dsg.js
frontend/src/utils/: example.ts  hooks.ts  index.ts  paths.ts  redux.ts  variables.ts
frontend/styles/: Home.module.scss
gatsby-starter-default/: package-lock.json
src/: crawler.py  recipe.py  recipes_controller.py  recipes_service.py  scraper.py
(+59 files in other folders)
